@@ -5,6 +5,7 @@
 
 passwd:		db files
 group:		db files
+initgroups:	db files
 shadow:		db files
 gshadow:	files
 
